<resources>
    <string name="app_name">CS246Project</string>
    <string name="updateInventory">Update Inventory</string>
    <string name="viewInventory">View Inventory</string>
    <string name="itemsNeeded">Items Needed</string>
    <string name="settings">Settings</string>
    <string name="logOut">Log Out</string>
    <string name="glanceItems">Items at a glance</string>
    <string name="home">Home</string>
    <string name="scanAddition">Scan For Addition</string>
    <string name="scanRemoval">Scan For Removal</string>
    <string name="manualUpdate">Manual Update</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="createInventory">Create Test Inventory</string>
    <string name="Item">Item</string>
    <string name="Amount">Amt</string>
    <string name="Limit">Lmt</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
</resources>
